packages/nxuskit-go/include/nxuskit.h


typedef struct NxuskitSolverSession NxuskitSolverSession;
typedef struct NxuskitStream NxuskitStream;
typedef int32_t (*NxuskitStreamCallback)(const char *chunk_json, void *user_data);
typedef void (*NxuskitStreamDoneCallback)(const char *final_json, void *user_data);
const char *nxuskit_version(void);
const char *nxuskit_abi_version(void);
const char *nxuskit_edition(void);
char *nxuskit_capabilities(void);
char *nxuskit_build_info(void);
char *nxuskit_entitlement_info(const char *license_key);
char *nxuskit_license_resolve(const char *explicit_key);
char *nxuskit_license_validate(const char *token_jwt);
char *nxuskit_license_machine_id(void);
char *nxuskit_license_activate(const char *purchase_id);
char *nxuskit_license_deactivate(void);
char *nxuskit_license_trial_issue(void);
char *nxuskit_license_trial_activate(const char *activation_code);
uint64_t nxuskit_clips_session_create(void);
void nxuskit_clips_session_destroy(uint64_t session);
int32_t nxuskit_clips_session_reset(uint64_t session);
int32_t nxuskit_clips_session_clear(uint64_t session);
char *nxuskit_clips_session_info(uint64_t session);
int32_t nxuskit_clips_session_load_file(uint64_t session, const char *path);
int32_t nxuskit_clips_session_load_string(uint64_t session, const char *constructs);
int32_t nxuskit_clips_session_load_binary(uint64_t _session, const char *path);
int32_t nxuskit_clips_session_save_binary(uint64_t _session, const char *path);
int32_t nxuskit_clips_session_build(uint64_t session, const char *construct);
int32_t nxuskit_clips_session_batch(uint64_t _session, const char *path);
int64_t nxuskit_clips_fact_assert_string(uint64_t session, const char *fact_string);
int64_t nxuskit_clips_fact_assert_structured(uint64_t session,
                                             const char *template_name,
                                             const char *slots_json);
int32_t nxuskit_clips_fact_retract(uint64_t session, int64_t fact_index);
int32_t nxuskit_clips_fact_retract_by_template(uint64_t session, const char *template_name);
bool nxuskit_clips_fact_exists(uint64_t session, int64_t fact_index);
char *nxuskit_clips_fact_get_slot(uint64_t session, int64_t fact_index, const char *slot_name);
char *nxuskit_clips_fact_slot_values(uint64_t session, int64_t fact_index);
char *nxuskit_clips_fact_pp_form(uint64_t session, int64_t fact_index);
int64_t nxuskit_clips_fact_index(uint64_t session, int64_t fact_index);
char *nxuskit_clips_facts_list(uint64_t session);
char *nxuskit_clips_facts_by_template(uint64_t session, const char *template_name);
bool nxuskit_clips_template_exists(uint64_t session, const char *name);
char *nxuskit_clips_template_list(uint64_t session);
char *nxuskit_clips_template_slot_names(uint64_t session, const char *template_name);
char *nxuskit_clips_template_slot_info(uint64_t session, const char *template_name);
char *nxuskit_clips_template_facts(uint64_t session, const char *template_name);
char *nxuskit_clips_template_pp_form(uint64_t session, const char *template_name);
int64_t nxuskit_clips_session_run(uint64_t session, int64_t limit);
int32_t nxuskit_clips_session_halt(uint64_t session);
int64_t nxuskit_clips_agenda_size(uint64_t session);
int32_t nxuskit_clips_agenda_clear(uint64_t session);
int32_t nxuskit_clips_agenda_reorder(uint64_t _session);
char *nxuskit_clips_strategy_get(uint64_t session);
int32_t nxuskit_clips_strategy_set(uint64_t session, const char *strategy);
char *nxuskit_clips_salience_mode_get(uint64_t _session);
int32_t nxuskit_clips_salience_mode_set(uint64_t _session, const char *mode);
bool nxuskit_clips_rule_exists(uint64_t session, const char *name);
char *nxuskit_clips_rule_list(uint64_t session);
int64_t nxuskit_clips_rule_times_fired(uint64_t session, const char *rule_name);
int32_t nxuskit_clips_rule_breakpoint_set(uint64_t session, const char *rule_name);
int32_t nxuskit_clips_rule_breakpoint_remove(uint64_t session, const char *rule_name);
bool nxuskit_clips_rule_has_breakpoint(uint64_t session, const char *rule_name);
int32_t nxuskit_clips_rule_refresh(uint64_t _session, const char *rule_name);
char *nxuskit_clips_rule_pp_form(uint64_t session, const char *rule_name);
int32_t nxuskit_clips_rule_delete(uint64_t _session, const char *rule_name);
bool nxuskit_clips_fact_duplication_get(uint64_t session);
int32_t nxuskit_clips_fact_duplication_set(uint64_t session, bool allow);
bool nxuskit_clips_reset_globals_get(uint64_t _session);
int32_t nxuskit_clips_reset_globals_set(uint64_t _session, bool reset);
char *nxuskit_clips_eval(uint64_t session, const char *expression);
char *nxuskit_clips_function_call(uint64_t session,
                                  const char *function_name,
                                  const char *args_json);
int32_t nxuskit_clips_session_load_json(uint64_t session, const char *json);
int32_t nxuskit_clips_session_preload(const char *name, const char *rules_json);
uint64_t nxuskit_clips_session_get_cached(const char *name);
int32_t nxuskit_clips_session_cache_remove(const char *name);
bool nxuskit_clips_module_exists(uint64_t session, const char *name);
char *nxuskit_clips_module_list(uint64_t session);
char *nxuskit_clips_module_current_get(uint64_t session);
int32_t nxuskit_clips_module_current_set(uint64_t session, const char *name);
int32_t nxuskit_clips_focus_push(uint64_t session, const char *module_name);
char *nxuskit_clips_focus_get(uint64_t session);
int32_t nxuskit_clips_focus_pop(uint64_t session);
int32_t nxuskit_clips_focus_clear(uint64_t session);
bool nxuskit_clips_global_exists(uint64_t session, const char *name);
char *nxuskit_clips_global_list(uint64_t session);
char *nxuskit_clips_global_get_value(uint64_t session, const char *name);
int32_t nxuskit_clips_global_set_value(uint64_t session, const char *name, const char *value_json);
int32_t nxuskit_clips_watch(uint64_t session, const char *item);
int32_t nxuskit_clips_unwatch(uint64_t session, const char *item);
int32_t nxuskit_clips_dribble_on(uint64_t session, const char *path);
int32_t nxuskit_clips_dribble_off(uint64_t session);
struct NxuskitSolverSession *nxuskit_solver_session_create(const char *config_json);
void nxuskit_solver_session_destroy(struct NxuskitSolverSession *session);
bool nxuskit_solver_add_variables(struct NxuskitSolverSession *session, const char *variables_json);
bool nxuskit_solver_add_constraints(struct NxuskitSolverSession *session,
                                    const char *constraints_json);
bool nxuskit_solver_set_objective(struct NxuskitSolverSession *session, const char *objective_json);
bool nxuskit_solver_retract(struct NxuskitSolverSession *session, const char *names_json);
bool nxuskit_solver_push(struct NxuskitSolverSession *session);
bool nxuskit_solver_pop(struct NxuskitSolverSession *session);
char *nxuskit_solver_solve(struct NxuskitSolverSession *session, const char *config_json);
bool nxuskit_solver_solve_stream(struct NxuskitSolverSession *session,
                                 const char *config_json,
                                 int32_t (*on_chunk)(const char*, void*),
                                 void (*on_done)(const char*, void*),
                                 void *user_data);
bool nxuskit_solver_reset(struct NxuskitSolverSession *session);
char *nxuskit_solver_variables(struct NxuskitSolverSession *session);
char *nxuskit_solver_constraints(struct NxuskitSolverSession *session);
char *nxuskit_solver_status(struct NxuskitSolverSession *session);
char *nxuskit_solver_capabilities(struct NxuskitSolverSession *session);
int64_t nxuskit_solver_num_variables(struct NxuskitSolverSession *session);
int64_t nxuskit_solver_num_constraints(struct NxuskitSolverSession *session);
bool nxuskit_solver_add_objective(struct NxuskitSolverSession *session, const char *objective_json);
bool nxuskit_solver_retract_objective(struct NxuskitSolverSession *session, const char *name);
char *nxuskit_solver_objectives(struct NxuskitSolverSession *session);
char *nxuskit_solver_explanation(struct NxuskitSolverSession *session);
bool nxuskit_solver_add_assumptions(struct NxuskitSolverSession *session,
                                    const char *assumptions_json);