packages/nxuskit/src/ffi.rs


    // Solver SDK: Session lifecycle
    pub(crate) fn nxuskit_solver_session_create(
        config_json: *const c_char,
    ) -> *mut NxuskitSolverSession;
    pub(crate) fn nxuskit_solver_session_destroy(session: *mut NxuskitSolverSession);
    pub(crate) fn nxuskit_solver_reset(session: *mut NxuskitSolverSession) -> bool;

    // Solver SDK: Model building
    pub(crate) fn nxuskit_solver_add_variables(
        session: *mut NxuskitSolverSession,
        vars_json: *const c_char,
    ) -> bool;
    pub(crate) fn nxuskit_solver_add_constraints(
        session: *mut NxuskitSolverSession,
        constraints_json: *const c_char,
    ) -> bool;
    pub(crate) fn nxuskit_solver_set_objective(
        session: *mut NxuskitSolverSession,
        objective_json: *const c_char,
    ) -> bool;
    pub(crate) fn nxuskit_solver_retract(
        session: *mut NxuskitSolverSession,
        names_json: *const c_char,
    ) -> bool;

    // Solver SDK: Scoping
    pub(crate) fn nxuskit_solver_push(session: *mut NxuskitSolverSession) -> bool;
    pub(crate) fn nxuskit_solver_pop(session: *mut NxuskitSolverSession) -> bool;

    // Solver SDK: Execution
    pub(crate) fn nxuskit_solver_solve(
        session: *mut NxuskitSolverSession,
        config_json: *const c_char,
    ) -> *mut c_char;
    pub(crate) fn nxuskit_solver_solve_stream(
        session: *mut NxuskitSolverSession,
        config_json: *const c_char,
        on_chunk: NxuskitStreamCallback,
        on_done: NxuskitStreamDoneCallback,
        user_data: *mut c_void,
    ) -> *mut NxuskitStream;

    // Solver SDK: Introspection
    pub(crate) fn nxuskit_solver_variables(session: *mut NxuskitSolverSession) -> *mut c_char;
    pub(crate) fn nxuskit_solver_constraints(session: *mut NxuskitSolverSession) -> *mut c_char;
    pub(crate) fn nxuskit_solver_status(session: *mut NxuskitSolverSession) -> *mut c_char;
    pub(crate) fn nxuskit_solver_capabilities(session: *mut NxuskitSolverSession) -> *mut c_char;
    pub(crate) fn nxuskit_solver_num_variables(session: *mut NxuskitSolverSession) -> i64;
    pub(crate) fn nxuskit_solver_num_constraints(session: *mut NxuskitSolverSession) -> i64;

    // Solver SDK: Multi-objective, Explanation & Assumptions
    pub(crate) fn nxuskit_solver_add_objective(
        session: *mut NxuskitSolverSession,
        objective_json: *const c_char,
    ) -> bool;
    pub(crate) fn nxuskit_solver_retract_objective(
        session: *mut NxuskitSolverSession,
        name: *const c_char,
    ) -> bool;
    pub(crate) fn nxuskit_solver_objectives(session: *mut NxuskitSolverSession) -> *mut c_char;
    pub(crate) fn nxuskit_solver_explanation(session: *mut NxuskitSolverSession) -> *mut c_char;
    pub(crate) fn nxuskit_solver_add_assumptions(
        session: *mut NxuskitSolverSession,
        assumptions_json: *const c_char,
    ) -> bool;

    // -----------------------------------------------------------------------
    // CLIPS Session API (u64 session handles — replaces opaque-pointer API)
    // -----------------------------------------------------------------------

    // Session lifecycle
    pub(crate) fn nxuskit_clips_session_create() -> u64;
    pub(crate) fn nxuskit_clips_session_destroy(session: u64);
    pub(crate) fn nxuskit_clips_session_reset(session: u64) -> i32;
    pub(crate) fn nxuskit_clips_session_clear(session: u64) -> i32;
    pub(crate) fn nxuskit_clips_session_info(session: u64) -> *mut c_char;

    // Session construct loading
    pub(crate) fn nxuskit_clips_session_load_file(session: u64, path: *const c_char) -> i32;
    pub(crate) fn nxuskit_clips_session_load_string(session: u64, constructs: *const c_char)
    -> i32;
    pub(crate) fn nxuskit_clips_session_load_binary(session: u64, path: *const c_char) -> i32;
    pub(crate) fn nxuskit_clips_session_save_binary(session: u64, path: *const c_char) -> i32;
    pub(crate) fn nxuskit_clips_session_build(session: u64, construct: *const c_char) -> i32;
    pub(crate) fn nxuskit_clips_session_batch(session: u64, path: *const c_char) -> i32;

    // Session fact operations
    pub(crate) fn nxuskit_clips_fact_assert_string(session: u64, fact: *const c_char) -> i64;
    pub(crate) fn nxuskit_clips_fact_assert_structured(
        session: u64,
        template: *const c_char,
        slots_json: *const c_char,
    ) -> i64;
    pub(crate) fn nxuskit_clips_fact_retract(session: u64, index: i64) -> i32;
    pub(crate) fn nxuskit_clips_fact_retract_by_template(
        session: u64,
        template: *const c_char,
    ) -> i32;
    pub(crate) fn nxuskit_clips_fact_exists(session: u64, index: i64) -> bool;
    pub(crate) fn nxuskit_clips_fact_get_slot(
        session: u64,
        index: i64,
        slot: *const c_char,
    ) -> *mut c_char;
    pub(crate) fn nxuskit_clips_fact_slot_values(session: u64, index: i64) -> *mut c_char;
    pub(crate) fn nxuskit_clips_fact_pp_form(session: u64, index: i64) -> *mut c_char;
    pub(crate) fn nxuskit_clips_fact_index(session: u64, index: i64) -> i64;
    pub(crate) fn nxuskit_clips_facts_list(session: u64) -> *mut c_char;
    pub(crate) fn nxuskit_clips_facts_by_template(
        session: u64,
        template: *const c_char,
    ) -> *mut c_char;

    // Session template operations
    pub(crate) fn nxuskit_clips_template_exists(session: u64, name: *const c_char) -> bool;
    pub(crate) fn nxuskit_clips_template_list(session: u64) -> *mut c_char;
    pub(crate) fn nxuskit_clips_template_slot_names(
        session: u64,
        name: *const c_char,
    ) -> *mut c_char;
    pub(crate) fn nxuskit_clips_template_slot_info(
        session: u64,
        name: *const c_char,
    ) -> *mut c_char;
    pub(crate) fn nxuskit_clips_template_facts(session: u64, name: *const c_char) -> *mut c_char;
    pub(crate) fn nxuskit_clips_template_pp_form(session: u64, name: *const c_char) -> *mut c_char;

    // Session rule operations
    pub(crate) fn nxuskit_clips_rule_exists(session: u64, name: *const c_char) -> bool;
    pub(crate) fn nxuskit_clips_rule_list(session: u64) -> *mut c_char;
    pub(crate) fn nxuskit_clips_rule_times_fired(session: u64, name: *const c_char) -> i64;
    pub(crate) fn nxuskit_clips_rule_breakpoint_set(session: u64, name: *const c_char) -> i32;
    pub(crate) fn nxuskit_clips_rule_breakpoint_remove(session: u64, name: *const c_char) -> i32;
    pub(crate) fn nxuskit_clips_rule_has_breakpoint(session: u64, name: *const c_char) -> bool;
    pub(crate) fn nxuskit_clips_rule_refresh(session: u64, name: *const c_char) -> i32;
    pub(crate) fn nxuskit_clips_rule_pp_form(session: u64, name: *const c_char) -> *mut c_char;
    pub(crate) fn nxuskit_clips_rule_delete(session: u64, name: *const c_char) -> i32;

    // Session execution & agenda
    pub(crate) fn nxuskit_clips_session_run(session: u64, limit: i64) -> i64;
    pub(crate) fn nxuskit_clips_session_halt(session: u64) -> i32;
    pub(crate) fn nxuskit_clips_agenda_size(session: u64) -> i64;
    pub(crate) fn nxuskit_clips_agenda_clear(session: u64) -> i32;
    pub(crate) fn nxuskit_clips_agenda_reorder(session: u64) -> i32;
    pub(crate) fn nxuskit_clips_strategy_get(session: u64) -> *mut c_char;
    pub(crate) fn nxuskit_clips_strategy_set(session: u64, strategy: *const c_char) -> i32;
    pub(crate) fn nxuskit_clips_salience_mode_get(session: u64) -> *mut c_char;
    pub(crate) fn nxuskit_clips_salience_mode_set(session: u64, mode: *const c_char) -> i32;

    // Session eval
    pub(crate) fn nxuskit_clips_eval(session: u64, expression: *const c_char) -> *mut c_char;
    pub(crate) fn nxuskit_clips_function_call(
        session: u64,
        name: *const c_char,
        args_json: *const c_char,
    ) -> *mut c_char;

    // Session settings
    pub(crate) fn nxuskit_clips_fact_duplication_get(session: u64) -> bool;
    pub(crate) fn nxuskit_clips_fact_duplication_set(session: u64, allow: bool) -> i32;
    pub(crate) fn nxuskit_clips_reset_globals_get(session: u64) -> bool;
    pub(crate) fn nxuskit_clips_reset_globals_set(session: u64, reset: bool) -> i32;

    // Session JSON loading
    pub(crate) fn nxuskit_clips_session_load_json(session: u64, json: *const c_char) -> i32;

    // Session cache
    pub(crate) fn nxuskit_clips_session_preload(
        name: *const c_char,
        rules_json: *const c_char,
    ) -> i32;
    pub(crate) fn nxuskit_clips_session_get_cached(name: *const c_char) -> u64;
    pub(crate) fn nxuskit_clips_session_cache_remove(name: *const c_char) -> i32;

    // Session module & focus
    pub(crate) fn nxuskit_clips_module_exists(session: u64, name: *const c_char) -> bool;
    pub(crate) fn nxuskit_clips_module_list(session: u64) -> *mut c_char;
    pub(crate) fn nxuskit_clips_module_current_get(session: u64) -> *mut c_char;
    pub(crate) fn nxuskit_clips_module_current_set(session: u64, name: *const c_char) -> i32;
    pub(crate) fn nxuskit_clips_focus_push(session: u64, module_name: *const c_char) -> i32;
    pub(crate) fn nxuskit_clips_focus_get(session: u64) -> *mut c_char;
    pub(crate) fn nxuskit_clips_focus_pop(session: u64) -> i32;
    pub(crate) fn nxuskit_clips_focus_clear(session: u64) -> i32;

    // Global variables
    pub(crate) fn nxuskit_clips_global_exists(session: u64, name: *const c_char) -> bool;
    pub(crate) fn nxuskit_clips_global_list(session: u64) -> *mut c_char;
    pub(crate) fn nxuskit_clips_global_get_value(session: u64, name: *const c_char) -> *mut c_char;
    pub(crate) fn nxuskit_clips_global_set_value(
        session: u64,
        name: *const c_char,
        value_json: *const c_char,
    ) -> i32;

    // Watch & diagnostics
    pub(crate) fn nxuskit_clips_watch(session: u64, item: *const c_char) -> i32;
    pub(crate) fn nxuskit_clips_unwatch(session: u64, item: *const c_char) -> i32;
    pub(crate) fn nxuskit_clips_dribble_on(session: u64, file_path: *const c_char) -> i32;
    pub(crate) fn nxuskit_clips_dribble_off(session: u64) -> i32;

}

// ---------------------------------------------------------------------------
// Dynamic linking: function table loaded at runtime via libloading
// ---------------------------------------------------------------------------

#[cfg(feature = "dynamic-link")]
pub(crate) mod dynamic {
    use super::*;
    use libloading::{Library, Symbol};
    use std::sync::OnceLock;

    /// Holds the dynamically loaded library and resolved function pointers.
    #[allow(dead_code)]
    pub(crate) struct SdkFunctions {
        // Keep the library alive for the process lifetime.
        _lib: Library,

        pub nxuskit_version: unsafe extern "C" fn() -> *const c_char,
        pub nxuskit_abi_version: unsafe extern "C" fn() -> *const c_char,
        pub nxuskit_edition: unsafe extern "C" fn() -> *const c_char,
        pub nxuskit_capabilities: unsafe extern "C" fn() -> *mut c_char,
        pub nxuskit_build_info: unsafe extern "C" fn() -> *mut c_char,
        pub nxuskit_entitlement_info:
            unsafe extern "C" fn(license_key: *const c_char) -> *mut c_char,

        // License functions
        pub nxuskit_license_resolve:
            unsafe extern "C" fn(explicit_key: *const c_char) -> *mut c_char,
        pub nxuskit_license_validate: unsafe extern "C" fn(token_jwt: *const c_char) -> *mut c_char,
        pub nxuskit_license_machine_id: unsafe extern "C" fn() -> *mut c_char,
        pub nxuskit_license_activate:
            unsafe extern "C" fn(purchase_id: *const c_char) -> *mut c_char,
        pub nxuskit_license_deactivate: unsafe extern "C" fn() -> *mut c_char,
        pub nxuskit_license_trial_issue: unsafe extern "C" fn() -> *mut c_char,
        pub nxuskit_license_trial_activate:
            unsafe extern "C" fn(activation_code: *const c_char) -> *mut c_char,
